testes usando o padding.